// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component SingleAddress - test SingleAddress - snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
        "paddingBottom": 20,
      }
    }
    style={
      {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 5,
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#c3c3c3",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginRight": 10,
                  "opacity": 0.9,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#c3c3c3",
            "marginHorizontal": 20,
            "marginTop": 20,
            "padding": 10,
          }
        }
      >
        <mockQRCode />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-evenly",
            "marginVertical": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 5,
              "marginTop": 20,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "borderColor": "#888888",
                  "borderRadius": 30,
                  "marginHorizontal": 10,
                  "paddingHorizontal": 5,
                  "paddingVertical": 5,
                }
              }
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "borderColor": "#888888",
                  "borderRadius": 30,
                  "marginHorizontal": 10,
                  "paddingHorizontal": 5,
                  "paddingVertical": 5,
                }
              }
            >
              <
                color="#ffffff"
                icon={
                  {
                    "icon": [
                      512,
                      512,
                      [
                        61533,
                        "check-circle",
                      ],
                      "f058",
                      "M256 512a256 256 0 1 1 0-512 256 256 0 1 1 0 512zm0-464a208 208 0 1 0 0 416 208 208 0 1 0 0-416zm70.7 121.9c7.8-10.7 22.8-13.1 33.5-5.3 10.7 7.8 13.1 22.8 5.3 33.5L243.4 366.1c-4.1 5.7-10.5 9.3-17.5 9.8-7 .5-13.9-2-18.8-6.9l-55.9-55.9c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l36 36 105.6-145.2z",
                    ],
                    "iconName": "circle-check",
                    "prefix": "far",
                  }
                }
                size={20}
                style={
                  {
                    "margin": 5,
                    "opacity": 0.9,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
            "marginBottom": 20,
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#888888",
                "fontSize": 16,
                "textDecorationLine": "underline",
              }
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderRadius": 24,
              "color": "#ffffff",
              "justifyContent": "center",
              "maxWidth": "90%",
              "minHeight": 48,
              "minWidth": "30%",
              "opacity": 1,
              "padding": 0,
              "paddingLeft": 20,
              "paddingRight": 20,
            }
          }
          testID="receive.unified-address"
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "minHeight": 48,
                "minWidth": 48,
                "padding": 0,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#ffffff",
                  "fontFamily": "monospace",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "opacity": 0.8,
                  "textAlign": "center",
                  "textTransform": "none",
                }
              }
            >
              UA-orchard...1234567890
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
            "marginTop": 10,
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#18bd18",
              "borderColor": "#18bd18",
              "borderRadius": 24,
              "borderWidth": 2,
              "justifyContent": "center",
              "maxWidth": "90%",
              "minHeight": 48,
              "minWidth": "30%",
              "opacity": 1,
              "padding": 0,
              "paddingLeft": 20,
              "paddingRight": 20,
              "width": "80%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
                "margin": 0,
                "minHeight": 48,
                "minWidth": 48,
                "padding": 0,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#011401",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "textAlign": "center",
                  "textTransform": "none",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Component SingleAddress UFVK - test SingleAddress UFVK - snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
        "paddingBottom": 20,
      }
    }
    style={
      {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 5,
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#c3c3c3",
            "marginHorizontal": 20,
            "marginTop": 20,
            "padding": 10,
          }
        }
      >
        <mockQRCode />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-evenly",
            "marginVertical": 0,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 5,
              "marginTop": 20,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "borderColor": "#888888",
                  "borderRadius": 30,
                  "marginHorizontal": 10,
                  "paddingHorizontal": 5,
                  "paddingVertical": 5,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 24,
            "color": "#ffffff",
            "justifyContent": "center",
            "maxWidth": "90%",
            "minHeight": 48,
            "minWidth": "30%",
            "opacity": 1,
            "padding": 0,
            "paddingLeft": 20,
            "paddingRight": 20,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 0,
              "minHeight": 48,
              "minWidth": 48,
              "padding": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#ffffff",
                "fontFamily": "monospace",
                "fontSize": 16,
                "fontWeight": "600",
                "opacity": 0.8,
                "textAlign": "center",
                "textTransform": "none",
              }
            }
          >
            uview12345...1234567890
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "column",
            "justifyContent": "center",
            "marginTop": 10,
            "width": "100%",
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
